syntax = "proto3";

package communicator;
option go_package="communicatorpb";

message Product {
    int32 amount = 1;
    float price = 2;
}

message ProductRequest{
    Product product = 1;
}

message ProductResponse{
    float avg = 1;
}

message ProductSliceRequest{
    repeated Product product = 1;
}

service AvgService{
    rpc GetAvg(stream ProductRequest) returns (ProductResponse) {};
    rpc GetAvgSlice(ProductSliceRequest) returns (ProductResponse) {};
}